opam-version: "2.0"
synopsis: "OCaml implementation of Luby transform code"
description: """
"""
maintainer: "Darren Ldl <darrenldldev@gmail.com>"
authors: "Darren Ldl"
license: "MIT"
homepage: "https://github.com/darrenldl/ofountain"
bug-reports: "https://github.com/darrenldl/ofountain/issues"
dev-repo: "git+https://github.com/darrenldl/ofountain"
depends: [
  "ocaml" {>= "4.08.1"}
  "bisect_ppx" {dev & >= "2.5.0"}
  "dune" {>= "2.7.0"}
  "oseq" {>= "0.3"}
  "containers" {>= "3.4"}
  "crowbar" {with-test}
  "alcotest" {with-test}
  "qcheck-alcotest" {with-test}
  "qcheck" {with-test}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
