(rule
 (alias  runtest)
 (action (run ../tests/main.exe)))

(library
 (flags     (-w "+a-4-9-29-40-42-44-48@8"))
 (name ofountain)
 (public_name ofountain)
 (instrumentation (backend bisect_ppx))
 (libraries containers
            cstruct
            ctypes
            ctypes.foreign
 )
 (library_flags (-a src/ofountain.o))
 (foreign_stubs
    (language c)
    (names ofountain)
    (flags -O3)
 )
)
