(rule
 (alias  runtest)
 (action (run ../tests/main.exe)))

(library
 (flags     (-w "+a-4-9-29-40-42-44-48@8"))
 (name lt_code)
 (public_name lt-code)
 (instrumentation (backend bisect_ppx))
 (libraries cstruct
            containers
            ctypes
            ctypes.foreign
  )
 (library_flags src/lt_code.o)
 (foreign_stubs
  (language c)
  (names lt_code)
  (flags :standard -march=native -std=c11 -fPIC -O3)
 )
 )
